--- a/PRACTICE/Test.html
+++ b/PRACTICE/Test.html
@@ -6,16 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div style="text-align: center;"><h1><img src="../image/Satvik.png" alt="This is Satvik Logo" width="100px" height="100px"></h1></div>
-    </header> 
-<table  border="1" width="100%" height="50px">
+<h1>Inventory Management</h1>
+<table>
     <tr>
-        <th>HOME</th>
-        <th>About</th>
-        <th>Booking</th>
-        <th>Menu</th>
-        <th>Contact</th>
+        <th>Total Stock</th>
+        <th>Minimum level Stock</th>
+        <th>Ordered Stock</th>
+    </tr>
+    <tr>
+        <th><Total Stock></th>
+        <th>Minimum level Stock</th>
+        <th>Ordered Stock</th>
     </tr>
 </table>
       
