--- a/PRACTICE/20FireExtInventory.html
+++ b/PRACTICE/20FireExtInventory.html
@@ -9,7 +9,7 @@
 
 <body>
    <blockquote> <h1>Input Form Fire Extinguisher</h1>
-    <form>
+    <form action="Extinghisher_Record" method="post">
         <table border="1" width="100%" style="text-align: justify;">
             <tr>
                 <th><label for="extinguisher">Extinguisher ID</label></th>
