--- a/PRACTICE/21IncidentInvestigationInputForm.html
+++ b/PRACTICE/21IncidentInvestigationInputForm.html
@@ -10,7 +10,7 @@
 <body>
     <blockquote>
         <h1>Incident Investigation Input Form</h1>
-        <form>
+        <form action="incidentinvestigation" method="post">
             <table border="1" width="100%" style="text-align: justify;">
 
                 <tr>
