--- a/TASK/12RestaurantsSatvik.html
+++ b/TASK/12RestaurantsSatvik.html
@@ -187,9 +187,9 @@
     <table border="0" width="100%" height="20Px">
         <tr>
             <th width="60%">Copyright @ Satvik </th>
-            <th width="10%"><button>Facebook</button></th>
-            <th width="10%"><button>Insta</button></th>
-            <th width="20%"><button>You Tube</button></th>
+            <th width="10%"><button><a href="#Satvikfacebook">Facebook</a></button></th>
+            <th width="10%"><button><a href="#Satvikinsta">Insta</a></button></th>
+            <th width="20%"><button><a href="#SatvikYouTube">You Tube</a></button></th>
         </tr>
     </table>
     </blockquote>
