--- a/PRACTICE/Test.html
+++ b/PRACTICE/Test.html
@@ -3,22 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Video Container</title>
+    <style>
+    *{
+        margin: 0 auto;
+        padding: 0;
+        box-sizing: border-box;
+        background-color: aqua;
+    }
+        .video-container {
+            position: relative;
+            width: 100%;
+        }
+        .video-container img {
+            width: 100%;
+            cursor: pointer;
+        }
+        .video-container iframe {
+            width: 100%;
+            height: 315px;
+            border: none;
+            display: none;
+        }
+        .video-container:focus-within img {
+            display: none;
+        }
+        .video-container:focus-within iframe {
+            display: block;
+        }
+    </style>
 </head>
 <body>
-<h1>Inventory Management</h1>
-<table>
-    <tr>
-        <th>Total Stock</th>
-        <th>Minimum level Stock</th>
-        <th>Ordered Stock</th>
-    </tr>
-    <tr>
-        <th><Total Stock></th>
-        <th>Minimum level Stock</th>
-        <th>Ordered Stock</th>
-    </tr>
-</table>
-      
+    <div class="video-container" tabindex="0">
+        <img src="../../CSS/Project/SabarmatiRiverfront/pics/vid01.png" alt="Click to play video">
+        <iframe src="../Video/TECHFSD0.5.mp4" allow="autoplay"></iframe>
+    </div>
 </body>
 </html>
